--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -787,42 +787,37 @@
                             <div class="news_image">
                                 <img src="img/blog/l-news/l-news-1.jpg" alt="">
                                 <div class="l_date">
-                                    <h5>14</h5>
-                                    <h6>Aug</h6>
+                                    <h5>2018</h5>
+                                    <!--<h6>Aug</h6>-->
                                 </div>
                             </div>
                             <div class="news_content">
-                                <a href="#"><h4>The Road To Success Is Always Under Construction</h4></a>
+                                <a><h4>Pack Plus-2018, at Delhi</h4></a>
                                 <h6>Posted By <a href="#">Admin</a></h6>
-                                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                <div class="pull-left">
+                                <p>Pack line was part of the recently concluded Pack Plus-2018, at Delhi. It was a great opportunity to showcase on our secondary packaging automation solution</p>
+                                <!--<div class="pull-left">
                                     <a href="#">2 Comments</a>
                                 </div>
                                 <div class="pull-right">
                                     <a href="#">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                                </div>
+                                </div>-->
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="latest_news_item">
                             <div class="news_image">
+                                <br><br>
                                 <img src="img/blog/l-news/l-news-2.jpg" alt="">
                                 <div class="l_date">
-                                    <h5>14</h5>
-                                    <h6>Aug</h6>
+                                    <h5>27-29</h5>
+                                    <h6>Sept</h6>
                                 </div>
                             </div>
                             <div class="news_content">
-                                <a href="#"><h4>The Road To Success Is Always Under Construction</h4></a>
+                                <a><h4>Pack-Ex 2018 </h4></a>
                                 <h6>Posted By <a href="#">Admin</a></h6>
-                                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                <div class="pull-left">
-                                    <a href="#">2 Comments</a>
-                                </div>
-                                <div class="pull-right">
-                                    <a href="#">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                                </div>
+                                <p>Mas Systech is going to participate and show case the products in ‘’Pack Line” series in the upcoming event of Pack-Ex 2018 from 27-29 September, at Bombay exhibition Centre, Mumbai at stall no F-50 Hall 1.</p>
                             </div>
                         </div>
                     </div>
@@ -831,20 +826,14 @@
                             <div class="news_image">
                                 <img src="img/blog/l-news/l-news-3.jpg" alt="">
                                 <div class="l_date">
-                                    <h5>14</h5>
-                                    <h6>Aug</h6>
+                                    <h5>24-26</h5>
+                                    <h6>Oct</h6>
                                 </div>
                             </div>
                             <div class="news_content">
-                                <a href="#"><h4>The Road To Success Is Always Under Construction</h4></a>
+                                <a><h4>Pacprocess 2018, at Bombay exhibition Centre, Mumbai</h4></a>
                                 <h6>Posted By <a href="#">Admin</a></h6>
-                                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-                                <div class="pull-left">
-                                    <a href="#">2 Comments</a>
-                                </div>
-                                <div class="pull-right">
-                                    <a href="#">Read More <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                                </div>
+                                <p>Mas Systech is excited and looking forward for the upcoming show of Pacprocess 2018 from 24-26 October, at Bombay exhibition Centre, Mumbai at stall No: E-12 Hall 1</p>
                             </div>
                         </div>
                     </div>
