--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -81,8 +81,7 @@
                                     </ul>-->
                                 </li>
                                 <li><a href="#about">About Us</a></li>
-                                <li class="dropdown submenu">
-                                    <a href="project-grid-three-column.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products</a>
+                                <li><a href="project-grid-three-column.html">Products</a>
                                     <!--<ul class="dropdown-menu">
                                         <li><a href="project-full-width.html">Project Full Width</a></li>
                                         <li><a href="project-grid-three-column.html">Project Grid 01</a></li>
