--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -280,7 +280,7 @@
                                 <div class="project_hover">
                                     <div class="project_hover_inner">
                                         <div class="project_hover_content">
-                                            <a href="#"><h4>Brewery</h4></a>
+                                            <a><h4>Brewery</h4></a>
                                             <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
                                             <a class="view_btn" href="#">View Project</a>-->
                                         </div>
@@ -292,7 +292,7 @@
                                 <div class="project_hover">
                                     <div class="project_hover_inner">
                                         <div class="project_hover_content">
-                                            <a href="#"><h4>Distillery</h4></a>
+                                            <a><h4>Distillery</h4></a>
                                             <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
                                             <a class="view_btn" href="#">View Project</a>-->
                                         </div>
@@ -304,7 +304,7 @@
                                 <div class="project_hover">
                                     <div class="project_hover_inner">
                                         <div class="project_hover_content">
-                                            <a href="#"><h4>Pharma & Cosmetics</h4></a>
+                                            <a><h4>Pharma & Cosmetics</h4></a>
                                             <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
                                             <a class="view_btn" href="#">View Project</a>-->
                                         </div>
@@ -316,7 +316,7 @@
                                 <div class="project_hover">
                                     <div class="project_hover_inner">
                                         <div class="project_hover_content">
-                                            <a href="#"><h4>Food & Beverages</h4></a>
+                                            <a><h4>Food & Beverages</h4></a>
                                             <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
                                             <a class="view_btn" href="#">View Project</a>-->
                                         </div>
@@ -328,7 +328,7 @@
                                 <div class="project_hover">
                                     <div class="project_hover_inner">
                                         <div class="project_hover_content">
-                                            <a href="#"><h4>Edible Oil & Lubricating Oil</h4></a>
+                                            <a><h4>Edible Oil & Lubricating Oil</h4></a>
                                             <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
                                             <a class="view_btn" href="#">View Project</a>-->
                                         </div>
@@ -340,7 +340,7 @@
                                 <div class="project_hover">
                                     <div class="project_hover_inner">
                                         <div class="project_hover_content">
-                                            <a href="#"><h4>Paint Industry</h4></a>
+                                            <a><h4>Paint Industry</h4></a>
                                             <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium </p>
                                             <a class="view_btn" href="#">View Project</a>-->
                                         </div>
