--- a/webuilder/project-grid-three-column.html
+++ b/webuilder/project-grid-three-column.html
@@ -121,10 +121,10 @@
         <section class="our_project2_area project_grid_three">
            <div class="container">
                <div class="main_c_b_title">
-                    <h2>Our<br class="title_br">Projects</h2>
-                    <h6>Great & Awesome Works</h6>
+                    <h2>Our<br class="title_br">Products</h2>
+                    <h6>Global Technology at Local Cost</h6>
                 </div>
-                <ul class="our_project_filter">
+                <!--<ul class="our_project_filter">
                     <li class="active" data-filter="*"><a href="#">All</a></li>
                     <li data-filter=".building"><a href="#">Buildings</a></li>
                     <li data-filter=".interior"><a href="#">Interior</a></li>
@@ -132,7 +132,7 @@
                     <li data-filter=".isolation"><a href="#">Isolation</a></li>
                     <li data-filter=".plumbing"><a href="#">Plumbing</a></li>
                     <li data-filter=".tiling"><a href="#">Tiling</a></li>
-                </ul>
+                </ul>-->
                 <div class="row our_project_details">
                     <div class="col-md-4 col-sm-6 building isolation interior">
                         <div class="project_item">
@@ -141,8 +141,8 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -155,8 +155,8 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -169,8 +169,8 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -183,8 +183,8 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -197,8 +197,8 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -211,8 +211,8 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -225,8 +225,8 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
@@ -239,14 +239,14 @@
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
                                         <a href="#"><h4>Jahanara Vila</h4></a>
-                                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#">View Project</a>
+                                        <!--<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
+                                        <a class="view_btn" href="#">View Project</a>-->
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 building isolation tiling design plumbing">
+                    <!--<div class="col-md-4 col-sm-6 building isolation tiling design plumbing">
                         <div class="project_item">
                             <img src="img/project/project-grid-three/project-g-three-9.jpg" alt="">
                             <div class="project_hover">
@@ -259,7 +259,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
            </div>
         </section>
@@ -283,7 +283,7 @@
             <div class="footer_widgets_area">
                 <div class="container">
                     <div class="row footer_widgets_inner">
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <aside class="f_widget about_widget">
                                 <img src="img/footer-logo..jpg" alt="">
                                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium. ed quia consequuntur magni dolores eos qui ratione.</p>
@@ -295,32 +295,7 @@
                                 </ul>
                             </aside>
                         </div>
-                        <!--<div class="col-md-4 col-sm-6">
-                            <aside class="f_widget recent_widget">
-                                <div class="f_w_title">
-                                    <h3>Recent Posts</h3>
-                                </div>
-                                <div class="recent_w_inner">
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <img src="img/blog/recent-post/recent-1.png" alt="">
-                                        </div>
-                                        <div class="media-body">
-                                            <a href="#"><p>The road to success is always under con-struction</p></a>
-                                        </div>
-                                    </div>
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <img src="img/blog/recent-post/recent-2.png" alt="">
-                                        </div>
-                                        <div class="media-body">
-                                            <a href="#"><p>The road to success is always under con-struction</p></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </aside>
-                        </div>-->
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <aside class="f_widget address_widget">
                                 <div class="f_w_title">
                                     <h3>Office Address</h3>
@@ -353,6 +328,32 @@
                                     </div>
                                 </div>
                             </aside>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img src="img/MII-R1.png" alt="">
+                            <!--<aside class="f_widget recent_widget">
+                                <div class="f_w_title">
+                                    <h3>Recent Posts</h3>
+                                </div>
+                                <div class="recent_w_inner">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="img/blog/recent-post/recent-1.png" alt="">
+                                        </div>
+                                        <div class="media-body">
+                                            <a href="#"><p>The road to success is always under con-struction</p></a>
+                                        </div>
+                                    </div>
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="img/blog/recent-post/recent-2.png" alt="">
+                                        </div>
+                                        <div class="media-body">
+                                            <a href="#"><p>The road to success is always under con-struction</p></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </aside>-->
                         </div>
                         <!--<div class="col-md-3 col-sm-6">
                             <aside class="f_widget give_us_widget">
