--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -899,7 +899,7 @@
             <div class="footer_widgets_area">
                 <div class="container">
                     <div class="row footer_widgets_inner">
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <aside class="f_widget about_widget">
                                 <img src="img/footer-logo..jpg" alt="">
                                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium. ed quia consequuntur magni dolores eos qui ratione.</p>
@@ -911,32 +911,7 @@
                                 </ul>
                             </aside>
                         </div>
-                        <!--<div class="col-md-4 col-sm-6">
-                            <aside class="f_widget recent_widget">
-                                <div class="f_w_title">
-                                    <h3>Recent Posts</h3>
-                                </div>
-                                <div class="recent_w_inner">
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <img src="img/blog/recent-post/recent-1.png" alt="">
-                                        </div>
-                                        <div class="media-body">
-                                            <a href="#"><p>The road to success is always under con-struction</p></a>
-                                        </div>
-                                    </div>
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <img src="img/blog/recent-post/recent-2.png" alt="">
-                                        </div>
-                                        <div class="media-body">
-                                            <a href="#"><p>The road to success is always under con-struction</p></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </aside>
-                        </div>-->
-                        <div class="col-md-6 col-sm-6">
+                        <div class="col-md-4 col-sm-6">
                             <aside class="f_widget address_widget">
                                 <div class="f_w_title">
                                     <h3>Office Address</h3>
@@ -969,6 +944,32 @@
                                     </div>
                                 </div>
                             </aside>
+                        </div>
+                        <div class="col-md-4 col-sm-6">
+                            <img src="img/MII-R1.png" alt="">
+                            <!--<aside class="f_widget recent_widget">
+                                <div class="f_w_title">
+                                    <h3>Recent Posts</h3>
+                                </div>
+                                <div class="recent_w_inner">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="img/blog/recent-post/recent-1.png" alt="">
+                                        </div>
+                                        <div class="media-body">
+                                            <a href="#"><p>The road to success is always under con-struction</p></a>
+                                        </div>
+                                    </div>
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <img src="img/blog/recent-post/recent-2.png" alt="">
+                                        </div>
+                                        <div class="media-body">
+                                            <a href="#"><p>The road to success is always under con-struction</p></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </aside>-->
                         </div>
                         <!--<div class="col-md-3 col-sm-6">
                             <aside class="f_widget give_us_widget">
