--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -7,7 +7,7 @@
         
         <link rel="icon" href="img/fav-icon.png" type="image/x-icon" />
         <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Construction - WeBuilder Template</title>
+        <title>Pack Line</title>
 
         <!-- Icon css link -->
         <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -42,9 +42,9 @@
             <div class="header_top_area">
                 <div class="container">
                     <div class="pull-left">
-                        <a href="#"><i class="fa fa-phone"></i>(012) - 3456789</a>
-                        <a href="#"><i class="fa fa-map-marker"></i>1234 Cafficic, California</a>
-                        <a href="#"><i class="mdi mdi-clock"></i>08 AM - 10 PM</a>
+                        <a><i class="fa fa-phone"></i>(020) - 6630 9584</a>
+                        <a><i class="fa fa-map-marker"></i>Chikhali, Pune 411062</a>
+                        <!--<a><i class="mdi mdi-clock"></i>08 AM - 10 PM</a>-->
                     </div>
                     <div class="pull-right">
                         <ul class="header_social">
@@ -67,34 +67,34 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             </button>
-                            <a class="navbar-brand" href="#"><img src="img/logo.png" alt=""></a>
+                            <a class="navbar-brand" href="index.html"><img src="img/logo.jpg" alt=""></a>
                         </div>
 
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                             <ul class="nav navbar-nav navbar-right">
-                                <li class="dropdown submenu">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Home</a>
-                                    <ul class="dropdown-menu">
+                                <li class="dropdown submenu active">
+                                    <a href="index.html">Home</a>
+                                    <!--<ul class="dropdown-menu">
                                         <li><a href="index.html">Home 01</a></li>
                                         <li><a href="index-2.html">Home 02</a></li>
-                                    </ul>
+                                    </ul>-->
                                 </li>
-                                <li class="dropdown submenu active">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects</a>
-                                    <ul class="dropdown-menu">
+                                <li><a href="index.html#about">About Us</a></li>
+                                <li><a href="project-grid-three-column.html">Products</a>
+                                    <!--<ul class="dropdown-menu">
                                         <li><a href="project-full-width.html">Project Full Width</a></li>
                                         <li><a href="project-grid-three-column.html">Project Grid 01</a></li>
                                         <li><a href="project-grid-two-column.html">Project Grid 02</a></li>
                                         <li><a href="project-three-column.html">Project Grid 03</a></li>
                                         <li><a href="project-single.html">Single Project</a></li>
-                                    </ul>
+                                    </ul>-->
                                 </li>
-                                <li><a href="service-single.html">Services</a></li>
-                                <li><a href="#">about us</a></li>
-                                <li><a href="blog-details.html">blog</a></li>
-                                <li><a href="#">Contact</a></li>
-                                <li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>
+                                <li><a href="index.html#services">Services</a></li>
+                                
+                                <li><a href="index.html#events">News & Events</a></li>
+                                <li><a href="index.html#contact">Contact</a></li>
+                                <!--<li class="icon_search"><a href="#"><i class="mdi mdi-cart"></i></a></li>-->
                             </ul>
                         </div><!-- /.navbar-collapse -->
                     </nav>
@@ -121,10 +121,10 @@
         <section class="our_project2_area project_grid_three">
            <div class="container">
                <div class="main_c_b_title">
-                    <h2>Our<br class="title_br">Projects</h2>
-                    <h6>Great & Awesome Works</h6>
+                    <h2>Our<br class="title_br">Products</h2>
+                    <h6>Global Technology at Local Cost</h6>
                 </div>
-                <ul class="our_project_filter">
+                <!--<ul class="our_project_filter">
                     <li class="active" data-filter="*"><a href="#">All</a></li>
                     <li data-filter=".building"><a href="#">Buildings</a></li>
                     <li data-filter=".interior"><a href="#">Interior</a></li>
@@ -132,7 +132,7 @@
                     <li data-filter=".isolation"><a href="#">Isolation</a></li>
                     <li data-filter=".plumbing"><a href="#">Plumbing</a></li>
                     <li data-filter=".tiling"><a href="#">Tiling</a></li>
-                </ul>
+                </ul>-->
                 <div class="row our_project_details">
                     <div class="col-md-4 col-sm-6 building isolation interior">
                         <div class="project_item">
