--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -248,7 +248,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-sm-6 building isolation tiling design plumbing">
+                    <!--<div class="col-md-4 col-sm-6 building isolation tiling design plumbing">
                         <div class="project_item">
                             <img src="img/project/project-grid-three/project-g-three-9.jpg" alt="">
                             <div class="project_hover">
@@ -261,7 +261,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
                 </div>
            </div>
         </section>
