--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -316,7 +316,7 @@
             </div>
           </div>
         <!--================Get Quote Area =================-->
-        <section class="get_quote_area yellow_get_quote">
+        <!--<section class="get_quote_area yellow_get_quote">
             <div class="container">
                 <div class="pull-left">
                     <h4>Looking for a quality and affordable constructor for your next project?</h4>
@@ -325,7 +325,7 @@
                     <a class="get_btn_black" href="#">GET A QUOTE</a>
                 </div>
             </div>
-        </section>
+        </section>-->
         <!--================End Get Quote Area =================-->
         
         <!--================Footer Area =================-->
@@ -336,7 +336,7 @@
                         <div class="col-md-4 col-sm-6">
                             <aside class="f_widget about_widget">
                                 <img src="img/footer-logo..jpg" alt="">
-                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium. ed quia consequuntur magni dolores eos qui ratione.</p>
+                                <p>Indigenous Packaging Solutions<br><b>Global Technology at Local Cost</b></p>
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
