--- a/webuilder/index.html
+++ b/webuilder/index.html
@@ -902,7 +902,7 @@
                         <div class="col-md-4 col-sm-6">
                             <aside class="f_widget about_widget">
                                 <img src="img/footer-logo..jpg" alt="">
-                                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium. ed quia consequuntur magni dolores eos qui ratione.</p>
+                                <p><p>Indigenous Packaging Solutions<br><b>Global Technology at Local Cost</b></p></p>
                                 <ul>
                                     <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>
