--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -461,6 +461,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
              $("#closeit").click(function(){
                 $("#myModal1").modal("hide");
             });
+             $("#closeit1").click(function(){
+                $("#myModal1").modal("hide");
+            });
+             $("#closeit2").click(function(){
+                $("#myModal2").modal("hide");
+            });
             $("#right1").click(function(){
                 $("#myModal1").modal("hide");
                 $("#myModal2").modal();
