--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -140,9 +140,9 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Jahanara Vila</h4></a>
+                                        <a href="#" onclick="" id='myBtn1'><h4>Jahanara Vila</h4></a>
                                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#" onclick="" id='myBtn1'>View Project</a>
+                                        <a class="view_btn" href="#" >View Project</a>
                                         <!-- Modal -->
                                              
                                     </div>
@@ -156,9 +156,9 @@
                             <div class="project_hover">
                                 <div class="project_hover_inner">
                                     <div class="project_hover_content">
-                                        <a href="#"><h4>Jahanara Vila</h4></a>
+                                        <a href="#" onclick="" id='myBtn2'><h4>Jahanara Vila</h4></a>
                                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusan-tium doloremque laudantium</p>
-                                        <a class="view_btn" href="#" onclick="" id='myBtn2'>View Project</a>
+                                        <a class="view_btn" href="#" >View Project</a>
                                     </div>
                                 </div>
                             </div>
