--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -270,6 +270,7 @@
             <div class="modal-dialog">
               <!-- Modal content-->
                 <div class="modal-content"> 
+                    <center> 
                          <button type="button" class="btn btn-default btn-sm">
                           <span class="glyphicon glyphicon-menu-left"></span>  
                         </button>
@@ -281,6 +282,7 @@
                         <button type="button" class="btn btn-default btn-sm" id="right1">
                           <span class="glyphicon glyphicon-menu-right"></span>  
                         </button>
+                        </center>
                     <div class="row">                  <center> <a href=# >    <i class="fa fa-youtube"></i></a> </center></div>
                 <div class="modal-body">
                     <!--<div class="container row"> 
@@ -327,6 +329,7 @@
             <div class="modal-dialog">
               <!-- Modal content-->
                 <div class="modal-content"> 
+                    <center> 
                          <button type="button" class="btn btn-default btn-sm">
                           <span class="glyphicon glyphicon-menu-left" id="left1"></span>  
                         </button>
@@ -338,7 +341,9 @@
                         <button type="button" class="btn btn-default btn-sm" id="">
                           <span class="glyphicon glyphicon-menu-right"></span>  
                         </button>
+                        </center> <center> 
                     <i class="fa fa-youtube"></i>
+                        </center>
                 <div class="modal-body">
                   <!--<div class="container row"> 
                 <div class="col-md-6"> this is to test the HTML code for 2nd code </div>
@@ -544,9 +549,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>&nbsp;
         <style>
         .modal-dialog {
  
-          width: 1100px;
+          width: 1300px; !important;
  
-          height: 800px !important;
+          height: 1000px !important;
  
         }
        .fa-youtube{
