--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -283,7 +283,7 @@
                           <span class="glyphicon glyphicon-menu-right"></span>  
                         </button>
                         </center>
-                    <div class="row">                  <center> <a href=# >    <i class="fa fa-youtube"></i></a> </center></div>
+                    <div class="row"> <center> <a href=# >    <i class="fa fa-youtube"></i></a> </center></div>
                 <div class="modal-body">
                     <!--<div class="container row"> 
                     <div class="col-md-6"> this is to test the HTML code</div>
@@ -549,13 +549,14 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script>&nbsp;
         <style>
         .modal-dialog {
  
-          width: 1300px; !important;
+          width: 1100px; !important;
  
-          height: 1000px !important;
+          height: 900px !important;
  
         }
        .fa-youtube{
     font-size: 100px;
+           color:red;
  }
      
         </style>
