--- a/webuilder/project-grid-three-column - Copy.html
+++ b/webuilder/project-grid-three-column - Copy.html
@@ -294,7 +294,7 @@
                           <thead>
                             <tr>
                               <th>#</th>
-                              <th>First Name</th>
+                              <th>First Name  <img src="img/project/project-grid-three/project-g-three-1.jpg" class="img-responsive" alt="" width="30%"> </th>
                               <th>Last Name</th>
                               <th>Username</th>
                             </tr>
@@ -354,9 +354,8 @@
                       <thead>
                         <tr>
                           <th>#</th>
-                          <th>First Name</th>
+                          <th>First Name  <img src="img/project/project-grid-three/project-g-three-2.jpg" alt="" width="33%" ></th>
                           <th>Last Name</th>
-                          <th>Username</th>
                         </tr>
                       </thead>
                       <tbody>
@@ -364,19 +363,11 @@
                           <th scope="row">1</th>
                           <td>Mark</td>
                           <td>Otto</td>
-                          <td>@mdo</td>
                         </tr>
                         <tr>
                           <th scope="row">2</th>
                           <td>Jacob</td>
                           <td>Thornton</td>
-                          <td>@fat</td>
-                        </tr>
-                        <tr>
-                          <th scope="row">3</th>
-                          <td>Larry</td>
-                          <td>the Bird</td>
-                          <td>@twitter</td>
                         </tr>
                       </tbody>
                     </table>
